# raster-space

./: README.md  rasterized.tif  rasterized.tif.aux.xml
cpp/build-rspace-Desktop_Qt_5_15_0_clang_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
cpp/build-rspace-Desktop_Qt_5_15_0_clang_64bit-Debug/.cmake/api/v1/reply/: cache-v2-39b2f5d4ad8bed08e045.json  cmakeFiles-v1-62af8dbab8177209b103.json  codemodel-v2-39de661168fa594124cc.json  index-2020-09-28T09-42-41-0535.json  target-rspace-Debug-210b8968ed994c8ad201.json
cpp/build-rspace-Desktop_Qt_5_15_0_clang_64bit-Debug/pybind11/: Makefile  cmake_install.cmake
cpp/build-rspace-Desktop_Qt_5_15_0_clang_64bit-MinSizeRel/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
cpp/build-rspace-Desktop_Qt_5_15_0_clang_64bit-MinSizeRel/.cmake/api/v1/reply/: cache-v2-04504eb7c4104a861ab3.json  cmakeFiles-v1-7b800f3274ef379a2ef6.json  (+3 more)
cpp/build-rspace-Desktop_Qt_5_15_0_clang_64bit-MinSizeRel/pybind11/: Makefile  cmake_install.cmake
cpp/rspace/: CMakeLists.txt  rspace.cpp  rspace_back.cpp
output/: buildings.shp  buildings.shx  buildings_dem_s.dbf  buildings_dem_s.shp  buildings_dem_s.shx  dir02.tif  dir02.tif.aux.xml  length02.tif  length02.tif.aux.xml  length05.tif  length05.tif.aux.xml  width.tif.aux.xml  width10.tif
raster_space/: Makefile  README.html  README.txt  __init__.py  metadata.txt  pb_tool.cfg  raster_space.py  raster_space_algorithm.py  raster_space_provider.py  raster_space_test.py  scratch.py
raster_space/help/source/: conf.py  index.rst
